--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
     "test": "jest",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "build:docker": "docker build -t shri-infra-homework-2025 .",
+    "start:docker": "docker run -p 3000:3000 shri-infra-homework-2025"
   },
   "dependencies": {
     "@bem-react/classname": "^1.6.0",
@@ -32,9 +34,9 @@
   "devDependencies": {
     "@jest/globals": "^29.3.1",
     "@testing-library/react": "^16.0.0",
-    "@types/jest": "^29.2.4",
+    "@types/jest": "^29.5.14",
     "@types/mini-css-extract-plugin": "^2.5.0",
-    "@types/node": "^20.13.0",
+    "@types/node": "^20.19.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-helmet": "^6.1.11",
