--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,76 +11,138 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: 🔍 Checkout code
+        uses: actions/checkout@v4
+
+      - name: ⚙️ Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: '18'
 
-      - name: Configure Git
+      - name: 📦 Configure Git user
         run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
 
-      - name: Install YC CLI and login to YCR
+      - name: ☁️ Install YC CLI and login to Container Registry
         env:
           YC_TOKEN: ${{ secrets.YC_TOKEN }}
           YC_REGISTRY: ${{ secrets.YC_REGISTRY }}
         run: |
+          echo "🔄 Installing Yandex Cloud CLI..."
           curl https://storage.yandexcloud.net/yandexcloud-yc/install.sh  | bash
-          echo "$YC_TOKEN" | ~/.local/share/yandex-cloud/bin/yc container registry configure-docker $YC_REGISTRY
 
-      - name: Run Lint & Tests
+          echo "🔐 Logging into Yandex Container Registry..."
+          echo "$YC_TOKEN" | ~/.local/share/yandex-cloud/bin/yc container registry configure-docker $YC_REGISTRY
+          docker info
+
+      - name: 🧪 Run Lint & Tests
         run: |
+          echo "🧪 Running lint and tests..."
           npm ci
           npm run lint
           npm run test
 
-      - name: Get commit range
+      - name: 📝 Get commit range
         id: commits
         run: |
+          echo "📄 Getting commit history..."
           PREV_TAG=$(git describe --tags --abbrev=0 HEAD^ 2>/dev/null || echo "")
           COMMITS=$(git log --pretty=format:"%h %s" ${PREV_TAG}..HEAD)
           echo "commits=$COMMITS" >> $GITHUB_ENV
+          echo "📄 Found commits:\n$COMMITS"
 
-      - name: Create release branch
+      - name: 🌿 Create release branch
         run: |
           VERSION=${{ github.run_number }}
+          echo "🌿 Creating release branch releases/$VERSION"
           git checkout -b releases/$VERSION
           git push origin releases/$VERSION
 
-      - name: Build Docker image
+      - name: 🛠️ Build Docker image
         run: |
           VERSION=${{ github.run_number }}
+          echo "🏗️ Building Docker image with tags:"
+          echo " - $YC_REGISTRY/app:$VERSION"
+          echo " - $YC_REGISTRY/app:${VERSION}_latest"
           docker build -t $YC_REGISTRY/app:$VERSION -t $YC_REGISTRY/app:${VERSION}_latest .
 
-      - name: Push Docker image
+      - name: 🚀 Push Docker image to Yandex Container Registry
         run: |
+          VERSION=${{ github.run_number }}
+          echo "🚚 Pushing image to registry..."
           docker push $YC_REGISTRY/app:$VERSION
           docker push $YC_REGISTRY/app:${VERSION}_latest
 
-      - name: Create Git tag
+      - name: 🏷️ Create Git tag
         run: |
           VERSION=${{ github.run_number }}
+          echo "🏷️ Creating git tag v$VERSION"
           git tag v$VERSION
           git push origin v$VERSION
 
-      - name: Update CHANGELOG.md
+      - name: 📄 Update CHANGELOG.md
         run: |
           VERSION=${{ github.run_number }}
+          echo "📝 Updating CHANGELOG.md"
           echo "# v$VERSION\n\n${{ env.commits }}\n\n$(cat CHANGELOG.md)" > CHANGELOG.md
           git add CHANGELOG.md
           git commit -m "Update CHANGELOG for v$VERSION"
-          git push
+          git push origin main
 
-      - name: Create Release Issue
-        uses: peter-evans/create-issue@v8
-        with:
-          title: "Release v${{ github.run_number }}"
-          body: |
-            Date: $(date +"%Y-%m-%d")
-            Author: ${{ github.actor }}
-            Version: v${{ github.run_number }}
-            Commits:
-            ${{ env.commits }}
-            Docker Image: `$YC_REGISTRY/app:${{ github.run_number }}`
-          labels: release
+      - name: 📣 Create Release Issue via GitHub API
+        id: create_issue
+        run: |
+          TITLE="🚢 Release v${{ github.run_number }}"
+          BODY="📅 Date: $(date +'%Y-%m-%d')\n🧑 Author: ${{ github.actor }}\n🔢 Version: v${{ github.run_number }}\n\n📜 Commits:\n${{ env.commits }}\n\n📦 Docker Image:\n\`\`\`bash\n$YC_REGISTRY/app:${{ github.run_number }}\n\`\`\`"
+          
+          echo "📌 Creating GitHub Issue: $TITLE"
+          ISSUE_JSON=$(mktemp)
+          cat <<EOF > $ISSUE_JSON
+          {
+            "title": "$TITLE",
+            "body": "$BODY",
+            "labels": ["release"]
+          }
+          EOF
+          ISSUE_URL="https://api.github.com/repos/ ${{ github.repository }}/issues"
+          RESPONSE=$(curl -fsSL --data "@$ISSUE_JSON" \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            "$ISSUE_URL")
+
+          ISSUE_NUMBER=$(echo "$RESPONSE" | jq -r '.number')
+
+          echo "ISSUE_NUMBER=$ISSUE_NUMBER" >> $GITHUB_ENV
+
+      - name: 💬 Comment on Issue if failed (error handling)
+        if: ${{ failure() }}
+        run: |
+          ISSUE_NUMBER=${{ env.ISSUE_NUMBER }}
+          echo "💬 Adding error comment to issue #$ISSUE_NUMBER"
+          ERROR_COMMENT="🚨 Release failed during execution.\n\nWorkflow: [Run #${{ github.run_number }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})\nUser: ${{ github.actor }}\nDate: $(date +'%Y-%m-%d %T')"
+          
+          COMMENT_JSON=$(mktemp)
+          echo "{\"body\": \"$ERROR_COMMENT\"}" > $COMMENT_JSON
+
+          curl -fsSL --request POST \
+            --url "https://api.github.com/repos/ ${{ github.repository }}/issues/${{ env.ISSUE_NUMBER }}/comments" \
+            --header "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            --header "Accept: application/vnd.github.v3+json" \
+            --data "@$COMMENT_JSON"
+
+      - name: 🎉 Comment on Issue if success
+        if: ${{ success() }}
+        run: |
+          ISSUE_NUMBER=${{ env.ISSUE_NUMBER }}
+          echo "💬 Adding success comment to issue #$ISSUE_NUMBER"
+          SUCCESS_COMMENT="🎉 Release completed successfully!\n\nWorkflow: [Run #${{ github.run_number }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})"
+          
+          COMMENT_JSON=$(mktemp)
+          echo "{\"body\": \"$SUCCESS_COMMENT\"}" > $COMMENT_JSON
+
+          curl -fsSL --request POST \
+            --url "https://api.github.com/repos/ ${{ github.repository }}/issues/${{ env.ISSUE_NUMBER }}/comments" \
+            --header "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            --header "Accept: application/vnd.github.v3+json" \
+            --data "@$COMMENT_JSON"
