--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,38 +6,91 @@ on:
       version:
         type: string
         required: true
+        description: 'Version to deploy (e.g. 1)'
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Check if image exists in YCR
+      - name: 🔍 Checkout code
+        uses: actions/checkout@v4
+
+      - name: 🧪 Configure Git user
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+
+      - name: 📦 Install YC CLI and login to Container Registry
+        env:
+          YC_TOKEN: ${{ secrets.YC_TOKEN }}
+          YC_REGISTRY: ${{ secrets.YC_REGISTRY }}
+        run: |
+          echo "🔄 Installing Yandex Cloud CLI..."
+          curl https://storage.yandexcloud.net/yandexcloud-yc/install.sh  | bash
+
+          echo "🔐 Logging into Yandex Container Registry..."
+          echo "$YC_TOKEN" | ~/.local/share/yandex-cloud/bin/yc container registry configure-docker $YC_REGISTRY
+
+      - name: 🔍 Check if image exists in YCR
+        id: check_image
         env:
           YC_REGISTRY: ${{ secrets.YC_REGISTRY }}
         run: |
+          echo "🔍 Checking for image: $YC_REGISTRY/app:${{ inputs.version }}_latest"
           IMAGE_EXISTS=$(yc container image list --registry-id $YC_REGISTRY | grep "${{ inputs.version }}_latest")
           if [ -z "$IMAGE_EXISTS" ]; then
-            echo "Image not found!"
+            echo "❌ Image not found!"
             exit 1
+          else
+            echo "✅ Image found, proceeding with deployment."
           fi
 
-      - name: SSH into server and deploy
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SERVER_IP }}
-          username: ubuntu
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            docker pull $YC_REGISTRY/app:${{ inputs.version }}_latest
-            docker stop infra-app || true
-            docker rm infra-app || true
-            docker run -d -p 3000:3000 --name infra-app $YC_REGISTRY/app:${{ inputs.version }}_latest
+      - name: 🛠️ SSH into server and deploy via SSH command
+        env:
+          SERVER_IP: ${{ secrets.SERVER_IP }}
+          SSH_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        run: |
+          echo "🔑 Writing SSH private key..."
+          echo "$SSH_KEY" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
 
-      - name: Comment on release issue
-        uses: thollander/actions-comment-pull-request@v2
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          message: |
-            🚀 **Deployed to production**
-            Date: $(date +"%Y-%m-%d")
-            By: ${{ github.actor }}
+          echo "🔌 Connecting to server ($SERVER_IP) and deploying app..."
+          ssh -o StrictHostKeyChecking=no ubuntu@$SERVER_IP <<EOF
+            echo "🐋 Pulling Docker image..."
+            docker pull $YC_REGISTRY/app:${{ inputs.version }}_latest
+
+            echo "🛑 Stopping old container..."
+            docker stop infra-app || true
+
+            echo "🗑 Removing old container..."
+            docker rm infra-app || true
+
+            echo "🚀 Running new container..."
+            docker run -d -p 3000:3000 --name infra-app $YC_REGISTRY/app:${{ inputs.version }}_latest
+          EOF
+
+      - name: 💬 Get Issue Number from Release Tag
+        id: get_issue
+        run: |
+          TAG_MSG=$(git tag -l v${{ inputs.version }} --format='%(contents)')
+          ISSUE_NUMBER=$(echo "$TAG_MSG" | grep -o '#[0-9]*' | tr -d '#' || echo "")
+          
+          if [ -z "$ISSUE_NUMBER" ]; then
+            echo "⚠️ Could not find issue number in tag message."
+            echo "ISSUE_NUMBER=" >> $GITHUB_ENV
+          else
+            echo "📌 Found linked issue #$ISSUE_NUMBER"
+            echo "ISSUE_NUMBER=$ISSUE_NUMBER" >> $GITHUB_ENV
+          fi
+
+      - name: 💬 Comment on Issue via GitHub API (if issue exists)
+        if: env.ISSUE_NUMBER != ''
+        run: |
+          COMMENT="🚀 **Deployed to production**\nDate: $(date +'%Y-%m-%d')\nBy: ${{ github.actor }}"
+          
+          echo "💬 Adding comment to issue #$ISSUE_NUMBER"
+          curl -fsSL --request POST \
+            --url "https://api.github.com/repos/ ${{ github.repository }}/issues/${{ env.ISSUE_NUMBER }}/comments" \
+            --header "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            --header "Accept: application/vnd.github.v3+json" \
+            --data '{"body":"'"$COMMENT"'"}'
