--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,10 @@ on:
         type: string
         description: 'Release version'
 
+env:
+  YC_REGISTRY: ${{ secrets.YC_REGISTRY }}
+  VERSION: ${{ github.run_number }}
+
 jobs:
   release:
     runs-on: ubuntu-latest
