--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,6 +44,10 @@ jobs:
 
           echo "🔐 Logging into Yandex Container Registry..."
           echo "$YC_TOKEN" | yc container registry configure-docker $YC_REGISTRY
+          echo "$YC_TOKEN" | docker login \
+            --username oauth \
+            --password-stdin \
+            cr.yandex
 
       - name: 🧪 Run Lint & Tests
         run: |
