--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -105,17 +105,19 @@ jobs:
           echo "# v$VERSION\n\n${{ env.commits }}\n\n$(cat CHANGELOG.md)" > CHANGELOG.md
           git add CHANGELOG.md
           git commit -m "Update CHANGELOG for v$VERSION"
-          git push origin main || {
-            echo "❌ Failed to push to main. You might be on a detached HEAD or wrong branch."
-            git status
-            exit 1
-          }
+
+          # Проверяем текущую ветку
+          CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
+          echo "📌 Current branch: $CURRENT_BRANCH — trying to push to this branch"
+
+          # Пушим в текущую ветку (releases/X), а не в main
+          git push origin $CURRENT_BRANCH
 
       - name: 💬 Create Release Issue via GitHub API
         id: create_issue
         run: |
           TITLE="🚢 Release v${{ github.run_number }}"
-          BODY="📅 Date: $(date +'%Y-%m-%d')\n🧑 Author: ${{ github.actor }}\n🔢 Version: v${{ github.run_number }}\n\n📦 Image:\n\`\`\`bash\n$YC_REGISTRY:${{ github.run_number }}\n$YC_REGISTRY:${{ github.run_number }}_latest\n\`\`\`\n\n📜 Commits:\n${{ env.commits }}"
+          BODY="📅 Date: $(date +'%Y-%m-%d')\n🧑 Author: ${{ github.actor }}\n🔢 Version: v${{ github.run_number }}\n\n📦 Docker Image:\n\`\`\`bash\n$YC_REGISTRY:${{ github.run_number }}\n$YC_REGISTRY:${{ github.run_number }}_latest\n\`\`\`\n\n📜 Commits:\n${{ env.commits }}" 
 
           ISSUE_JSON=$(mktemp)
           cat <<EOF > $ISSUE_JSON
@@ -139,7 +141,11 @@ jobs:
         if: ${{ failure() }}
         run: |
           ISSUE_NUMBER=${{ env.ISSUE_NUMBER }}
-          echo "💬 Adding error comment to issue #$ISSUE_NUMBER"
+          if [ -z "$ISSUE_NUMBER" ]; then
+            echo "⚠️ Could not comment: no issue number found"
+            exit 0
+          fi
+
           ERROR_COMMENT="🚨 Release failed during execution.\n\nWorkflow: [Run #${{ github.run_number }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})\nUser: ${{ github.actor }}\nDate: $(date +'%Y-%m-%d %T')"
           
           COMMENT_JSON=$(mktemp)
@@ -155,9 +161,8 @@ jobs:
         if: ${{ success() }}
         run: |
           ISSUE_NUMBER=${{ env.ISSUE_NUMBER }}
-          echo "💬 Adding success comment to issue #$ISSUE_NUMBER"
           SUCCESS_COMMENT="🎉 Release completed successfully!\n\nWorkflow: [Run #${{ github.run_number }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})"
-
+          
           COMMENT_JSON=$(mktemp)
           echo "{\"body\": \"$SUCCESS_COMMENT\"}" > $COMMENT_JSON
 
