--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,14 +47,11 @@ jobs:
               VERSION=${{ inputs.version }}
               echo "🔍 Checking for image: $YC_REGISTRY:${VERSION}_latest"
               
-              IMAGE_EXISTS=$(yc container image list --registry-id $YC_REGISTRY | grep "${VERSION}_latest")
-              
-              if [ -z "$IMAGE_EXISTS" ]; then
-                echo "❌ Image not found!"
+              if ! docker pull ${{ env.YC_REGISTRY }}:${VERSION}_latest; then
+                echo "❌ Image not found in registry!"
                 exit 1
-              else
-                echo "✅ Image found, proceeding with deployment."
               fi
+              echo "✅ Image verified successfully"
 
       - name: 🛠️ SSH into server and deploy via SSH command
         env:
