--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,14 +44,23 @@ jobs:
         env:
           YC_REGISTRY: ${{ secrets.YC_REGISTRY }}
         run: |
-              VERSION=${{ inputs.version }}
-              echo "🔍 Checking for image: $YC_REGISTRY:${VERSION}_latest"
+             VERSION=${{ inputs.version }}
+              FULL_IMAGE_NAME="cr.yandex/$YC_REGISTRY_ID/$IMAGE_NAME:${VERSION}_latest"
+              echo "🔍 Checking if image exists: $FULL_IMAGE_NAME"
               
-              if ! docker pull ${{ env.YC_REGISTRY }}:${VERSION}_latest; then
-                echo "❌ Image not found in registry!"
+              AUTH_HEADER="Authorization: Bearer ${{ secrets.YC_OAUTH_TOKEN }}"
+              REGISTRY_URL="https://container-registry.api.cloud.yandex.net/container-registry/v1/images"
+          
+              RESPONSE=$(curl -s -o /dev/null -w "%{http_code}" \
+                -H "$AUTH_HEADER" \
+                "$REGISTRY_URL/$YC_REGISTRY_ID/$IMAGE_NAME/tags/${VERSION}_latest")
+          
+              if [ "$RESPONSE" -eq 200 ]; then
+                echo "✅ Image found in registry"
+              else
+                echo "❌ Image not found (HTTP $RESPONSE)"
                 exit 1
               fi
-              echo "✅ Image verified successfully"
 
       - name: 🛠️ SSH into server and deploy via SSH command
         env:
