--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,7 @@ jobs:
           username: ubuntu
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            IMAGE="${{ secrets.YC_REGISTRY_ID }}:${{ github.event.inputs.version }}_latest"
+            IMAGE="${{ secrets.YC_REGISTRY }}:${{ github.event.inputs.version }}_latest"
 
             echo "🐋 Pulling image: $IMAGE"
             docker login cr.yandex -u oauth --password-stdin <<< "${{ secrets.YC_TOKEN }}"
