--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,7 @@ jobs:
         uses: appleboy/ssh-action@v1
         with:
           host: ${{ secrets.SERVER_IP }}
-          username: ubuntu
+          username: epolyakh
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             IMAGE="${{ secrets.YC_REGISTRY }}:${{ github.event.inputs.version }}_latest"
