--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,6 +56,16 @@ jobs:
           username: epolyakh
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
+            echo "🐋 Installing Docker..."
+            sudo apt-get update
+            sudo apt-get install -y apt-transport-https ca-certificates curl software-properties-common
+            curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+            sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+            sudo apt-get update
+            sudo apt-get install -y docker-ce docker-ce-cli containerd.io
+            
+            sudo usermod -aG docker $USER
+
             IMAGE="${{ secrets.YC_REGISTRY }}:${{ github.event.inputs.version }}_latest"
 
             echo "🐋 Pulling image: $IMAGE"
