--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,8 +63,13 @@ jobs:
             sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
             sudo apt-get update
             sudo apt-get install -y docker-ce docker-ce-cli containerd.io
-            
-            sudo usermod -aG docker $USER
+            fi
+
+             if ! groups $USER | grep -q '\bdocker\b'; then
+              echo "👥 Adding user to docker group..."
+              sudo usermod -aG docker $USER
+              sudo setfacl -m user:$USER:rw /var/run/docker.sock
+            fi
 
             IMAGE="${{ secrets.YC_REGISTRY }}:${{ github.event.inputs.version }}_latest"
 
